--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ body {
       rgba(240, 240, 240, 0.144),
       rgba(255, 255, 255, 0.336)
     ),
-    url("images/image-1.jpg");
+    url("image-1.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
